--- a/templates/dream/step_final.html.twig
+++ b/templates/dream/step_final.html.twig
@@ -6,12 +6,12 @@
     <section class="page postyourdream">
         <div class="wrapper">
             <div class="dream-phase" id="dream-step-no-account">
-                <h2>Contez votre rêve</h2>
-                <p>Confirmation</p>
-                <h3>Merci d’avoir partagé<br/>ce moment !</h3>
-                <p>Retrouvez votre rêve sur la Terre, et voyez si d’autres personnes ont eu des rêves similaires.</p>
+                <h2>{{'dream.share'|trans}}</h2>
+                <p>{{'dream.confirm'|trans}}</p>
+                <h3>{{'dream.thanks'|trans|raw}}</h3>
+                <p>{{'dream.final'|trans}}</p>
                 <div class="next-step-buttons">
-                    <a class="blue-button" href="{{ url('app_index') }}">Retour à l'accueil</a>
+                    <a class="blue-button" href="{{ url('app_index') }}">{{'dream.back_home'|trans}}</a>
                 </div>
             </div>
         </div>
