--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -9,7 +9,7 @@
     <section id="home">
         <div class="wrapper">
                 <div class="left-col" id="left-col-connexion">
-                    <h1>Reset your password</h1>
+                    <h1>{{'user.reset_password'|trans}}</h1>
 
                     {{ form_start(requestForm) }}
                     {{ form_row(requestForm.email) }}
