--- a/templates/security/mail_sent.html.twig
+++ b/templates/security/mail_sent.html.twig
@@ -11,7 +11,7 @@
 
         <div class="wrapper">
             <div class="dream-phase" id="dream-step-account-publication">
-                <h2>Contez votre rêve</h2>
+                <h2>{{'dream.share'|trans}}</h2>
                 <p>Confirmation</p>
                 <p>Vous aller recevoir un email afin de confirmer votre inscription. Vous pourrez ensuite utiliser votre compte.</p>
                 <p>Si vous ne recevez pas d’email de confirmation, merci de vérifier dans vos spam ou <a href="{{ url('app_contact') }}">contactez-nous</a>.</p>
