--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -30,7 +30,7 @@
             <!-- Step inscription compte 6b -->
             <div class="dream-phase" id="dream-step-account-creation">
 
-                <h2>Contez votre rêve</h2>
+                <h2>{{'dream.share'|trans}}</h2>
                 <p>Inscription et publication</p>
                 <h1>{{ 'register.title'|trans }}</h1>
                 {{ form_start(registrationForm) }}
