--- a/templates/security/valide.html.twig
+++ b/templates/security/valide.html.twig
@@ -7,7 +7,7 @@
         <div class="wrapper page">
             <!-- Validation compte 7 -->
             <div class="dream-phase" id="dream-step-account-validation">
-                <h2>Contez votre rêve</h2>
+                <h2>{{'dream.share'|trans}}</h2>
                 <p>Confirmation d'inscription</p>
                 <h3>Votre inscription<br/>est validée !</h3>
                 <div class="next-step-buttons">
