--- a/templates/dream/step_category.html.twig
+++ b/templates/dream/step_category.html.twig
@@ -20,9 +20,9 @@
     <section class="page postyourdream">
         <div class="wrapper">
             <div class="dream-phase" id="dream-step1">
-                <h2>Contez votre rêve</h2>
+                <h2>{{'dream.share'|trans}}</h2>
                 <p>Phase 1/3</p>
-                <h3>Etait-ce un rêve <br/> ou un cauchemar ?</h3>
+                <h3>{{'category.dream'|trans}}<br/> {{ 'category.nightmare'|trans}} ?</h3>
 
                 <form action="{{ path('app_dream') }}" method="post">
                     <div class="dream-options">
@@ -45,8 +45,8 @@
                         </div>
                     </div>
                     <div class="next-step-buttons">
-                        <input class="blue-button" type="submit"  name="cancel" value="Annuler">
-                        <input class="blue-button" type="submit" value="suivant">
+                        <input class="blue-button" type="submit"  name="cancel" value="{{ 'dream.cancel'|trans }}">
+                        <input class="blue-button" type="submit" value="{{'dream.next'|trans}}">
                     </div>
                 </form>
             </div>
