--- a/templates/dream/step_register.html.twig
+++ b/templates/dream/step_register.html.twig
@@ -11,25 +11,16 @@
 
                 <div class="dream-phase" id="dream-step-account">
 
-                    <h2>Contez votre rêve</h2>
-                    <p>Publication et inscription</p>
-                    <h3>Une petite minute !</h3>
-                    <p>Votre rêve restera visible 24h sur la Terre avant d’être caché pour le public.<br/>
-                        Si vous le souhaitez, <b>vous pouvez vous inscrire avant de publier.</b></p>
-
-                    <p class="step5-text">Que pouvez-vous faire avec votre compte ?</p>
-                    <p>Modifier votre rêve si besoin<br/>
-                        Garder une trace de votre rêve (au delà des 24h)<br/>
-                        Liker les rêves des autres<br/>
-                        Voir les rêves similaires</p>
+                    <h2>{{'dream.share'|trans}}</h2>
+                    <p>{{'dream.register'|trans}}</p>
+                    {{'dream.resgister_text'|trans|raw}}
                     <div class="next-step-buttons">
-                        <div class="blue-button" ><a onclick="this.closest('form').submit();return false;">Publier sans s'inscrire</a></div>
-                        <div class="blue-button" onclick="location.href='{{ url('app_register') }}'" > Publier
-                                en s'inscrivant</div>
+                        <div class="blue-button" ><a onclick="this.closest('form').submit();return false;">{{'dream.register_no'|trans}}</a></div>
+                        <div class="blue-button" onclick="location.href='{{ url('app_register') }}'" > {{'dream.register_yes'|trans}}</div>
                     </div>
                     <div class="next-step-buttons">
                         <a class="blue-button" id="back-to-step-4"
-                           href="{{ url('app_dream') }}">Précédent</a>
+                           href="{{ url('app_dream') }}">{{ 'register.previous'|trans }}</a>
                     </div>
                 </div>
             </form>
