--- a/templates/reset_password/check_email.html.twig
+++ b/templates/reset_password/check_email.html.twig
@@ -1,11 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Password Reset Email Sent{% endblock %}
 
 {% block body %}
-    <p>
-        If an account matching your email exists, then an email was just sent that contains a link that you can use to reset your password.
-        This link will expire in {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.
-    </p>
-    <p>If you don't receive an email please check your spam folder or <a href="{{ path('app_forgot_password_request') }}">try again</a>.</p>
+    <section id="single-content">
+        <div class="wrapper">
+            <h1>{{'user.reset_password_sent'|trans}}</h1>
+            <p>
+                {{'user.reset_passord_text'|trans}} {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.
+            </p>
+            <p>{{'user.reset_password_not_sent'|trans}} <a href="{{ path('app_forgot_password_request') }}">{{'user.reset_password_try_again'|trans}}</a>.</p>
+        </div>
+    </section>
 {% endblock %}
