--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -1,12 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Reset your password{% endblock %}
-
 {% block body %}
-    <h1>Reset your password</h1>
+    <section>
+        <div class="wrapper">
+            <h1>{{'user.reset_password'|trans}}</h1>
 
-    {{ form_start(resetForm) }}
-        {{ form_row(resetForm.plainPassword) }}
-        <button class="btn btn-primary">Reset password</button>
-    {{ form_end(resetForm) }}
+            {{ form_start(resetForm) }}
+            {{ form_row(resetForm.plainPassword) }}
+            <button class="btn btn-primary">{{'user.reset_password'|trans}}</button>
+            {{ form_end(resetForm) }}
+
+        </div>
+    </section>
 {% endblock %}
