--- a/templates/security/confirmation_email.html.twig
+++ b/templates/security/confirmation_email.html.twig
@@ -1,7 +1,7 @@
-<h2 style="text-align: center;">Création de votre compte Reveurdream</h2> <img
+<h2 style="text-align: center;">{{'mail.creation.title'|trans}}</h2> <img
         style="text-align: center; margin: 10px auto;"
         src="{{ asset('build/logo.png') }}">
-<p>Bonjour, {{ user.username }}</p>
+<p>{{'mail.creation.hi'|trans}} {{ user.username }}</p>
 <p>Votre compte sur <a href="{{ url('app_index') }}">{{ url('app_index') }}</a> est créé.</p> <p>
     Pour confirmer votre
     adresse email et valider votre inscription, merci de cliquer sur <a href="{{ signedUrl }}">ce lien</a></p>
