--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -31,7 +31,7 @@
             <div class="dream-phase" id="dream-step-account-creation">
 
                 <h2>{{'dream.share'|trans}}</h2>
-                <p>Inscription et publication</p>
+                <p>{{'register.text'|trans}}</p>
                 <h1>{{ 'register.title'|trans }}</h1>
                 {{ form_start(registrationForm) }}
 
