--- a/templates/pages/contact.html.twig
+++ b/templates/pages/contact.html.twig
@@ -1,6 +1,9 @@
 {% extends 'base.html.twig' %}
 {% block title %}Contact{% endblock %}
 {% block body %}
+    {% for msg in app.session.flashBag.get('success') %}
+        <div class="alert alert-success" role="alert">{{ msg }}</div>
+    {% endfor %}
     <section id="single-content">
         <div class="wrapper">
             <h1>Contact</h1>
