--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
+
     {% if error %}
         <style>
             .alert {
@@ -56,5 +58,21 @@
     </section>
 
 
+    <script>
+        const password = document.querySelector("#user_pass");
+        console.log(password)
+        password.insertAdjacentHTML('afterend', '<i class="bi bi-eye-slash" id="togglePassword"></i>')
+
+        const togglePassword = document.querySelector("#togglePassword");
+        togglePassword.addEventListener("click", function () {
+            // toggle the type attribute
+            const type = password.getAttribute("type") === "password" ? "text" : "password";
+            password.setAttribute("type", type);
+
+            // toggle the icon
+            this.classList.toggle("bi-eye");
+        });
+
+    </script>
 
 {% endblock %}
