--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -14,7 +14,7 @@
                     {{ form_start(requestForm) }}
                     {{ form_row(requestForm.email) }}
 
-                    <input type="submit" class="btn btn-primary" value="Send password reset email">
+                    <input type="submit" class="btn btn-primary" value="{{'user.password_request'|trans}}">
                     {{ form_end(requestForm) }}
                 </div>
 
