--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -42,6 +42,7 @@
                     <a class="blue-button" href="{{ url('app_index') }}">{{ 'register.previous'|trans }}</a>
                     <input type="submit" name="submit" id="account-submit" class="blue-button" value="{{ 'register.submit'|trans }}">
                 </div>
+                <p class="account-password-lost"><a href="{{ url('connect_facebook_start') }}">{{'login.with_register'|trans}} Facebook</a></p>
 
                 {{ form_end(registrationForm) }}
             </div>
