--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <section>
+    <section id="single-content">
         <div class="wrapper">
             <h1>{{'user.reset_password'|trans}}</h1>
 
