--- a/templates/mails/confirmation_inscription/es.html.twig
+++ b/templates/mails/confirmation_inscription/es.html.twig
@@ -2,9 +2,8 @@
         style="text-align: center; margin: 10px auto;"
         src="{{ asset('build/logo.png') }}">
 <p>{{'mail.creation.hi'|trans}} {{ user.username }}</p>
-<p> Hola {{ usuario.nombre de usuario }}</p>
 <p>Se crea su cuenta en <a href="{{ url('app_index') }}">{{ url('app_index') }}</a>.</p> <p>
     para confirmar su
-    dirección de correo electrónico y valide su registro, haga clic en <a href="{{ SignedUrl }}">este enlace</a></p>
+    dirección de correo electrónico y valide su registro, haga clic en <a href="{{ signedUrl }}">este enlace</a></p>
 <p>Nosotros
     ¡No puedo esperar a leer tu último sueño!</p> <p>Hasta pronto,<br/> El equipo de reveurdream.com</p>
