--- a/templates/dream/edit.html.twig
+++ b/templates/dream/edit.html.twig
@@ -56,5 +56,18 @@
         </div>
     </section>
 
+    <script>
+        function textCounter(field,field2,maxlimit)
+        {
+            var countfield = document.getElementById(field2);
+            if ( field.value.length > maxlimit ) {
+                field.value = field.value.substring( 0, maxlimit );
+                return false;
+            } else {
+                countfield.value = maxlimit - field.value.length;
+            }
+        }
+        textCounter(document.getElementById('form_description'), 'counter', 500);
+    </script>
 
 {% endblock %}
