--- a/templates/dream/step_theme.html.twig
+++ b/templates/dream/step_theme.html.twig
@@ -65,7 +65,7 @@
 
                                 {%endif%}
                                 <style>#cat-{{ theme.id}}:after {
-                                        content:  "{{name}}" ;
+                                        content:  "{{name}}" !important;
                                     }</style>
 
                                 <label class="labl">
