--- a/templates/dream/step_content.html.twig
+++ b/templates/dream/step_content.html.twig
@@ -29,4 +29,19 @@
 
         </div>
     </section>
+
+    <script>
+        function textCounter(field,field2,maxlimit)
+        {
+            var countfield = document.getElementById(field2);
+            if ( field.value.length > maxlimit ) {
+                field.value = field.value.substring( 0, maxlimit );
+                return false;
+            } else {
+                countfield.value = maxlimit - field.value.length;
+            }
+        }
+        textCounter(document.getElementById('dream_story'), 'counter', 500);
+
+    </script>
 {% endblock %}
