--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -11,5 +11,32 @@
             {{ form_end(resetForm) }}
 
         </div>
+        <script>
+            const password = document.querySelector("#change_password_form_plainPassword_first");
+            password.insertAdjacentHTML('afterend', '<i class="bi bi-eye-slash" id="togglePassword"></i>')
+
+            const togglePassword = document.querySelector("#togglePassword");
+            togglePassword.addEventListener("click", function () {
+                // toggle the type attribute
+                const type = password.getAttribute("type") === "password" ? "text" : "password";
+                password.setAttribute("type", type);
+
+                // toggle the icon
+                this.classList.toggle("bi-eye");
+            });
+
+            const password2 = document.querySelector("#change_password_form_plainPassword_second");
+            password2.insertAdjacentHTML('afterend', '<i class="bi bi-eye-slash" id="togglePassword2"></i>')
+
+            const togglePassword2 = document.querySelector("#togglePassword2");
+            togglePassword2.addEventListener("click", function () {
+                // toggle the type attribute
+                const type = password2.getAttribute("type") === "password" ? "text" : "password";
+                password2.setAttribute("type", type);
+
+                // toggle the icon
+                this.classList.toggle("bi-eye");
+            });
+        </script>
     </section>
 {% endblock %}
