--- a/templates/dream/edit.html.twig
+++ b/templates/dream/edit.html.twig
@@ -31,7 +31,7 @@
                     <span style="color: #45568b">{{ 'dream.invi'|trans}}</span>
                 </div>
 
-                <a href="" class="similar-dreams">{{'dream.similaire'|trans}}</a>
+{#                <a href="" class="similar-dreams">{{'dream.similaire'|trans}}</a>#}
             </div>
 
             <div class="edit-dream">
